--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -189,7 +189,7 @@ postPage = "blog/post"
 <!-- START .main-contents .bom-contents -->
 <div class="main-contents black-contents">
     <div class="container">
-      <h2 class="ft-heading">What our customers say  <span>about us</span></h2>
+      <h2 class="ft-heading">オフショア開発の適切モデルの<span>ご選定</span></h2>
         <div class="row">
             <div class="col-sm-12">
                 <div class="testimonial">
