--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -186,6 +186,8 @@ postPage = "blog/post"
 </div>
 <!-- END .main-contents .bom-contents -->
 
+{% partial 'offshore-model' %}
+
 <!-- START .main-contents .bom-contents -->
 <div class="main-contents black-contents">
     <div class="container">
