--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -186,10 +186,26 @@ postPage = "blog/post"
 </div>
 <!-- END .main-contents .bom-contents -->
 
-{% partial 'offshore-model' %}
+<div class="main-contents black-contents">
+    <div class="container">
+        <h2 class="ft-heading">オフショア開発の適切モデルの<span>ご選定</span></h2>
+        <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <img class="" src="/storage/app/media/offshore-bse.png">
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <img class="" src="/storage/app/media/offshore-onsite-bse.png">
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <img class="" src="/storage/app/media/offshore-customer.png">
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- START .main-contents .bom-contents -->
-<div class="main-contents black-contents">
+<!-- <div class="main-contents black-contents">
     <div class="container">
       <h2 class="ft-heading">オフショア開発の適切モデルの<span>ご選定</span></h2>
         <div class="row">
@@ -200,7 +216,7 @@ postPage = "blog/post"
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- END .main-contents .bom-contents -->
 
 
