--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -187,17 +187,17 @@ postPage = "blog/post"
 <!-- END .main-contents .bom-contents -->
 
 <div class="main-contents black-contents">
-    <div class="container">
+    <div class="container-fluid">
         <h2 class="ft-heading">オフショア開発の適切モデルの<span>ご選定</span></h2>
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <img class="" src="/storage/app/media/offshore-bse.png">
+                <img style="width:100%;margin-left:auto;margin-right:auto;"  src="/storage/app/media/offshore-bse.png">
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4" style="border-left:1px solid white; border-right:1px solid white;">
+                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-onsite-bse.png">
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <img class="" src="/storage/app/media/offshore-onsite-bse.png">
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <img class="" src="/storage/app/media/offshore-customer.png">
+                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-customer.png">
             </div>
         </div>
     </div>
