--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -84,7 +84,23 @@ postPage = "blog/post"
 </div>
 <!-- END .main-contents -->
 
+
+<div class="main-contents black-contents">
+    <div class="container-fluid">
+        <h2 class="ft-heading">オフショアハブを<span>利用流れ</span></h2>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <img style="display:block; width:70%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-macching-01.png">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-development-approach-process-01.png">
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- TAM TEST START .main-contents -->
+<!-- 
 <div class="main-contents">
     <div class="container">
         <h2 class="ft-heading">利用流れ</h2>
@@ -95,6 +111,7 @@ postPage = "blog/post"
         </div>
     </div>
 </div>
+-->
 <!-- END .main-contents -->
 
 
@@ -188,16 +205,16 @@ postPage = "blog/post"
 
 <div class="main-contents black-contents">
     <div class="container-fluid">
-        <h2 class="ft-heading">オフショア開発の適切モデルの<span>ご選定</span></h2>
+        <h2 class="ft-heading">オフショア開発の適切モデルを<span>ご選定</span></h2>
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <img style="width:100%;margin-left:auto;margin-right:auto;"  src="/storage/app/media/offshore-bse.png">
+                <img style="display:block; width:90%;margin-left:auto;margin-right:auto;"  src="/storage/app/media/offshore-bse.png">
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4" style="border-left:1px solid white; border-right:1px solid white;">
-                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-onsite-bse.png">
+                <img style="display:block; width:90%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-onsite-bse.png">
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-customer.png">
+                <img style="display:block; width:90%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-customer.png">
             </div>
         </div>
     </div>
