--- a/themes/ds-offshorehub-theme/pages/contact.htm
+++ b/themes/ds-offshorehub-theme/pages/contact.htm
@@ -42,13 +42,12 @@ is_hidden = 0
                   <div class="sidebar-widget">
                     <!-- Sidebar Contact info -->
                     <div class="styled-box gray">
-                        <h3 class="text-upper">Contact Us</h3>
-                        <p>We're very approachable and would love to speak to you. Feel free to call, send us an email, Tweet us or simply complete the enquiry form.</p>
+                        <h3 class="text-upper">連絡先</h3>
+                        <p>オフショア開発導入予定がある方々是非ご検討下さい。 お気にする点がございましたら、気軽にオフショアハブまでお問い合わせてください。</p>
                         <ul class="contact-info list-unstyled">
-                            <li class="ct-phone">+44 - 123 - 4567890</li>
-                            <li class="ct-email">info@travelhub.com</li>
-                            <li class="ct-facebook">www.facebook.com/travelhub</li>
-                            <li class="ct-twitter">#travelhub</li>
+                            <li class="ct-phone">03-5926-4420</li>
+                            <li class="ct-email">info@offshorehub.jp</li>
+                            <li class="ct-facebook">www.facebook.com/offshorehub</li>
                         </ul>
                     </div>
                 </div>
