--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -89,10 +89,10 @@ postPage = "blog/post"
     <div class="container-fluid">
         <h2 class="ft-heading">オフショアハブを<span>利用流れ</span></h2>
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="col-xs-12 col-sm-6 col-md-6" style="padding-bottom:50px">
                 <img style="display:block; width:70%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-macching-01.png">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="col-xs-12 col-sm-6 col-md-6" style="">
                 <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-development-approach-process-01.png">
             </div>
         </div>
@@ -207,13 +207,13 @@ postPage = "blog/post"
     <div class="container-fluid">
         <h2 class="ft-heading">オフショア開発の適切モデルを<span>ご選定</span></h2>
         <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-4" style="padding-bottom:50px;">
                 <img style="display:block; width:90%;margin-left:auto;margin-right:auto;"  src="/storage/app/media/offshore-bse.png">
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4" style="border-left:1px solid white; border-right:1px solid white;">
+            <div class="col-xs-12 col-sm-4 col-md-4" style="padding-bottom:50px;border-left:1px solid white; border-right:1px solid white;">
                 <img style="display:block; width:90%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-onsite-bse.png">
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-4" style="padding-bottom:30px;">
                 <img style="display:block; width:90%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-customer.png">
             </div>
         </div>
