--- a/themes/ds-offshorehub-theme/pages/contact.htm
+++ b/themes/ds-offshorehub-theme/pages/contact.htm
@@ -11,7 +11,7 @@ is_hidden = 0
         <div class="container">
             <div class="row">
                 <section class="col-sm-12">
-                    <h1 class="text-upper">Contact</h1>
+                    <h1 class="text-upper">問い合わせ</h1>
                     </section>
             </div>
         </div>
@@ -22,8 +22,19 @@ is_hidden = 0
     <div class="container">
         <div class="row">
             <div id="page" class="col-md-8">
+            
+                <div class="main-contents black-contents">
+                    <div class="container-fluid">
+                        <h2 class="ft-heading">利用流れ</span></h2>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12" style="">
+                                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-development-approach-process-01.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <section id="contactForm">
-                    <h2 class="ft-heading text-upper">If You need further details - Please write us</h2>
                     <div id="scf-message-{{ contactForm }}">
                         {% partial contactForm ~ '::scf-message' %}
                     </div>
@@ -43,7 +54,12 @@ is_hidden = 0
                     <!-- Sidebar Contact info -->
                     <div class="styled-box gray">
                         <h3 class="text-upper">連絡先</h3>
-                        <p>オフショア開発導入予定がある方々是非ご検討下さい。 お気にする点がございましたら、気軽にオフショアハブまでお問い合わせてください。</p>
+                        <span class="glyphicon glyphicon-asterisk"></span><p class="alert alert-primary">オフショア開発やベトナムのプロバイダーの活用を検討してる方。</p>
+                        <p class="alert alert-primary">オフショア開発は未経験で不安のことがある方</p>
+                        <p class="alert alert-primary">信頼や品質、納期などについて心配する方。</p>
+                        <p class="alert alert-primary">ベトナムオフショア開発企業一括見積もり、比較したい。</p>
+
+                        <h4>お気にする点がございましたら、気軽にオフショアハブまでお問い合わせてください。</h4>
                         <ul class="contact-info list-unstyled">
                             <li class="ct-phone">03-5926-4420</li>
                             <li class="ct-email">info@offshorehub.jp</li>
