--- a/themes/ds-offshorehub-theme/pages/search.htm
+++ b/themes/ds-offshorehub-theme/pages/search.htm
@@ -15,7 +15,7 @@ visitPageMessage = "Visit page"
         <div class="container">
             <div class="row">
                 <section class="col-md-12">
-                    <h1 class="text-upper">Search Result</h1>
+                    <h1 class="text-upper">結果</h1>
                 </section>
             </div>
         </div>
