--- a/themes/ds-offshorehub-theme/pages/home.htm
+++ b/themes/ds-offshorehub-theme/pages/home.htm
@@ -87,7 +87,7 @@ postPage = "blog/post"
 
 <div class="main-contents black-contents">
     <div class="container-fluid">
-        <h2 class="ft-heading">オフショアハブを<span>利用流れ</span></h2>
+        <h2 class="ft-heading">オフショアハブの<span>利用流れ</span></h2>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6" style="padding-bottom:50px">
                 <img style="display:block; width:70%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-macching-01.png">
@@ -205,7 +205,7 @@ postPage = "blog/post"
 
 <div class="main-contents black-contents">
     <div class="container-fluid">
-        <h2 class="ft-heading">オフショア開発の適切モデルを<span>ご選定</span></h2>
+        <h2 class="ft-heading">オフショア開発の<span>適切モデル</span></h2>
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4" style="padding-bottom:50px;">
                 <img style="display:block; width:90%;margin-left:auto;margin-right:auto;"  src="/storage/app/media/offshore-bse.png">
