--- a/themes/ds-offshorehub-theme/pages/contact.htm
+++ b/themes/ds-offshorehub-theme/pages/contact.htm
@@ -28,7 +28,7 @@ is_hidden = 0
                         <h2 class="ft-heading">利用流れ</span></h2>
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12" style="">
-                                <img style="width:100%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-development-approach-process-01.png">
+                                <img style="display:block;width:90%;margin-left:auto;margin-right:auto;" src="/storage/app/media/offshore-development-approach-process-02.png">
                             </div>
                         </div>
                     </div>
